# discogs_alert

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  __main__.py  client.py  main.py  pyproject.toml  requirements.txt  setup_app.py  simple_loop.py  tox.ini
.github/workflows/: pr_checks.yml  release.yml
discogs_alert/: __init__.py  __main__.py  _sparkle.py  click.py  client.py  config.py  currency.py  entities.py  loop.py  menubar.py  notify.py  scrape.py  state.py  types.py  util.py  utils.py
discogs_alert/alert/: __init__.py  _response.py  base.py  email.py  gmail.py  ntfy.py  pushbullet.py  telegram.py
discogs_alert/notify/: __init__.py  pushbullet.py
discogs_alert/util/: click.py  constants.py  currency.py  rate_limit.py  system.py  wantlist_directives.py
docker/: Dockerfile  docker-entrypoint.sh
docker/launchd/: com.discogsalert.plist.template
docs/: appcast.xml  menubar-app-proposal.md  redesign-proposal.md  release.md  writing-an-alerter.md
examples/: config.example.toml
examples/discogs-alert-alerter-template/: README.md  pyproject.toml
examples/discogs-alert-alerter-template/discogs_alert_example/: alerter.py
examples/discogs-alert-alerter-template/tests/: test_alerter.py
scripts/: append_to_appcast.py
tests/: conftest.py  test_append_to_appcast.py  test_client.py  test_config.py  test_e2e.py  test_entities.py  test_imports.py  test_loop.py  test_main.py  test_menubar.py  test_scrape.py  test_sparkle.py  test_state.py  test_util.py
tests/data/: currency_rates.json  marketplace_listing.html  marketplace_listing_real.html
tests/notify/: test_alert_registry.py  test_alert_response.py  test_gmail.py  test_ntfy.py  test_telegram.py
tests/util/: test_click.py  test_currency.py  test_rate_limit.py  test_system.py  test_wantlist_directives.py
