[tool.poetry]
name = "discogs_alert"
version = "0.0.22"
description = "Configurable, real-time alerts for your discogs wantlist"
license = "MIT"
authors = ["mhsb <michael.h.s.ball@gmail.com>"]
homepage = 'https://github.com/michaelhball/discogs_alert'
repository = 'https://github.com/michaelhball/discogs_alert'
keywords = ['discogs', 'dig', 'digger']
include = ["LICENSE"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.14.3"
click = "^8.3.1"
dacite = "^1.9.2"
fake-useragent = "^1.1.1"
freecurrencyapi = "^0.1.0"
pre-commit = "^4.5.1"
psutil = "^7.2.2"
requests = "^2.32.5"
ruff = "^0.14.14"
schedule = "^1.2.2"
selenium = "^4.14.0"
tox = "^4.34.1"
webdriver-manager = "~4"

[tool.poetry.dev-dependencies]
pytest = "^9.0.2"
pytest-sugar = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry2conda]
name = "da"

[tool.pytest.ini_options]
markers = [
    "online: marks tests as requiring internet access (select with '--online')",
]

[tool.black]
line-length = 120

[tool.ruff]
select = ["E", "F", "I", "TID", "W"]
exclude = [".git", ".ruff_cache", "dist", "docker", "img"]
fix = false
ignore-init-module-imports = true
line-length = 120
target-version = "py38"  # assume Python 3.8 style

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
combine-as-imports = true
force-single-line = false
order-by-type = false
