[tool.poetry]
name = "discogs_alert"
version = "0.0.21"
description = "Configurable, real-time alerts for your discogs wantlist"
license = "MIT"
authors = ["mhsb <michael.h.s.ball@gmail.com>"]
homepage = 'https://github.com/michaelhball/discogs_alert'
repository = 'https://github.com/michaelhball/discogs_alert'
keywords = ['discogs', 'dig', 'digger']
include = ["LICENSE", "discogs_alert/py.typed"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12"
click = "^8.1"
curl_cffi = "^0.7"
pydantic = "^2.6"
requests = "^2.32"
schedule = "^1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^3.7"
pytest = "^8.2"
pytest-cov = "^5.0"
pytest-sugar = "^1.0"
ruff = "^0.6"
tox = "^4.15"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# Built-in alerters are registered both here (so `pip install discogs-alert`
# exposes them via entry points) and in `discogs_alert.alert.__init__._BUILTIN_ALERTERS`
# (so editable installs and tests work without entry-point installation). Third-
# party alerters can register themselves under the same group:
#
#     [project.entry-points."discogs_alert.alerters"]
#     ntfy = "discogs_alert_ntfy:NtfyAlerter"
[tool.poetry.plugins."discogs_alert.alerters"]
NTFY = "discogs_alert.alert.ntfy:NtfyAlerter"
PUSHBULLET = "discogs_alert.alert.pushbullet:PushbulletAlerter"
TELEGRAM = "discogs_alert.alert.telegram:TelegramAlerter"

[tool.pytest.ini_options]
markers = [
    "online: marks tests as requiring internet access (select with '--online')",
]

[tool.black]
line-length = 120

[tool.ruff]
exclude = [".git", ".ruff_cache", "dist", "docker", "img"]
fix = false
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "TID", "W"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
order-by-type = false
