# Rename `name` and the entry-point block when you copy this template.

[project]
name = "discogs-alert-example"
version = "0.0.1"
description = "Example custom alerter for discogs_alert. Ships its own pip package."
requires-python = ">=3.10"
dependencies = [
    "discogs_alert >= 0.0.21",
    # Add your service's HTTP client here, e.g. `requests`, `httpx`, etc.
]

# This is the bit that makes discogs_alert pick up your alerter.
# The entry-point NAME (uppercased) is what the user passes to
# --alerter-type. The VALUE is the Python import path to your subclass.
[project.entry-points."discogs_alert.alerters"]
EXAMPLE = "discogs_alert_example.alerter:ExampleAlerter"

[project.optional-dependencies]
dev = [
    "pytest >= 7",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["discogs_alert_example*"]
